crates/oxidd-derive/tests/countable/enum_repr_u64.rs
use oxidd_derive::Countable;

#[repr(u64)]
#[derive(Countable)]
enum Tag {
    X,
}

fn main() {}
